agregacion de el token en la ruta factura y la implementacion de la documentacion jsdoc - falta realizar todos los comentarios para que se puedea visualizar en el html de docs
