# app/routes/factura.router.js
@@ -4,6 +4,7 @@ import { crearFactura,
         listarFactura,
         modificarFactura, 
         mostrarFactura } from "../controllers/controllers.factura";
+import { verifyToken } from "../middleware/oauth";
 
 
 
@@ -11,9 +12,9 @@ const rutaFactura = Router();
 
 rutaFactura.get("/factura/:id", mostrarFactura);
 rutaFactura.get("/factura", listarFactura);
-rutaFactura.post("/factura", crearFactura);
-rutaFactura.put("/factura", modificarFactura);
-rutaFactura.delete("/factura", eliminarFactura);
+rutaFactura.post("/factura", verifyToken, crearFactura);
+rutaFactura.put("/factura", verifyToken, modificarFactura);
+rutaFactura.delete("/factura", verifyToken, eliminarFactura);
 
 
 
